# Loc8r

./: .gitignore  README.md  pyproject.toml
locator_scanner/: codegen_pf.py  locators_pf.py  naming_pf.py  scanner_console.py  templates_PageObjectPF.j2  xpath_builder.py
mcp_poc/: mcp_console.py  xpath_builder.py
tests/: test_codegen_pf.py
