[project]
name = "Locat8r"
version = "0.1.0"
description = "Console app that launches Playwright, scans a page for interactable elements, and outputs robust locators."
authors = [
  { name = "Misha Dyrda" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "playwright>=1.47.0",
]

[project.scripts]
loc8 = "locator_scanner.mcp_console:main"

[tool.playwright]
# Optional place-holder for future config
